--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Backend/GameTradeZone.Infrastructure/bin
 Backend/GameTradeZone.Service/obj
 Backend/GameTradeZone.Service/bin
 FrontEnd/.vscode
+FrontEnd/node_modules
